--- a/Project.toml
+++ b/Project.toml
@@ -42,6 +42,7 @@ Parameters = "^0.12.0"
 PrettyTables = "2"
 SentinelArrays = "^1.3"
 StaticArrays = "^0.12.0, ^1"
+StructArrays = "0.6"
 Tables = "^1.0.0"
 julia = "^1.6"
 xrootdgo_jll = "^0.31.1"
