--- a/Project.toml
+++ b/Project.toml
@@ -36,7 +36,7 @@ IterTools = "^1"
 LRUCache = "^1.3.0"
 LibDeflate = "^0.4.1"
 LorentzVectors = "^0.4.0"
-Memoization = "^0.1.10"
+Memoization = "^0.1.10, 0.2"
 Mixers = "^0.1.0"
 Parameters = "^0.12.0"
 PrettyTables = "2"
@@ -48,13 +48,13 @@ julia = "^1.6"
 xrootdgo_jll = "^0.31.1"
 
 [extras]
+Arrow = "69666777-d1a9-59fb-9406-91d4454c9d45"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 MD5 = "6ac74813-4b46-53a4-afec-0b5dc9d7885c"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
-Arrow = "69666777-d1a9-59fb-9406-91d4454c9d45"
-DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 
 [targets]
 test = ["Test", "Pkg", "ThreadsX", "MD5", "InteractiveUtils", "Arrow", "DataFrames"]
