--- a/Project.toml
+++ b/Project.toml
@@ -29,7 +29,7 @@ xrootdgo_jll = "9d84c17e-11f2-50ef-8cc9-e9701362097f"
 [compat]
 AbstractTrees = "^0.3.0, 0.4"
 ArraysOfArrays = "^0.5.3, ^0.6"
-BitIntegers = "^0.2.6"
+BitIntegers = "^0.2.6, 0.3"
 CodecLz4 = "^0.3.0, ^0.4.0"
 CodecXz = "^0.6.0, ^0.7.0"
 CodecZstd = "^0.6.0, ^0.7.0"
@@ -46,8 +46,8 @@ SentinelArrays = "^1.3"
 StaticArrays = "^0.12.0, ^1"
 StructArrays = "0.6"
 Tables = "^1.0.0"
-xrootdgo_jll = "^0.32.1"
 julia = "^1.6"
+xrootdgo_jll = "^0.32.1"
 
 [extras]
 Arrow = "69666777-d1a9-59fb-9406-91d4454c9d45"
