--- a/Project.toml
+++ b/Project.toml
@@ -27,6 +27,7 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 xrootdgo_jll = "9d84c17e-11f2-50ef-8cc9-e9701362097f"
 
 [compat]
+Arrow = "2"
 AbstractTrees = "^0.3.0, 0.4"
 ArraysOfArrays = "^0.5.3, ^0.6"
 BitIntegers = "^0.2.6, ^0.3"
@@ -46,8 +47,8 @@ SentinelArrays = "^1.3"
 StaticArrays = "^0.12.0, ^1"
 StructArrays = "0.6"
 Tables = "^1.0.0"
-xrootdgo_jll = "^0.32.1"
 julia = "^1.6"
+xrootdgo_jll = "^0.32.1"
 
 [extras]
 Arrow = "69666777-d1a9-59fb-9406-91d4454c9d45"
@@ -56,7 +57,6 @@ InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 MD5 = "6ac74813-4b46-53a4-afec-0b5dc9d7885c"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-ThreadsX = "ac1d9e8a-700a-412c-b207-f0111f4b6c0d"
 
 [targets]
-test = ["Test", "Pkg", "ThreadsX", "MD5", "InteractiveUtils", "Arrow", "DataFrames"]
+test = ["Test", "Pkg", "MD5", "InteractiveUtils", "Arrow", "DataFrames"]
