--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,7 @@ LorentzVectors = "3f54b04b-17fc-5cd4-9758-90c048d965e3"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 Mixers = "2a8e4939-dab8-5edc-8f64-72a8776f13de"
 Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
+MultiThreadedCaches = "18056a9e-ed0c-4ef3-9ad7-376a7fb08032"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 SentinelArrays = "91c51154-3ec4-41a3-a24f-3f23e20d615c"
