--- a/Project.toml
+++ b/Project.toml
@@ -33,7 +33,7 @@ Arrow = "2 - 2.5"
 BitIntegers = "^0.2.6, ^0.3"
 CodecLz4 = "^0.3.0, ^0.4.0"
 CodecXz = "^0.6.0, ^0.7.0"
-CodecZstd = "^0.6.0, ^0.7.0"
+CodecZstd = "^0.6.0, ^0.7.0, 0.8"
 HTTP = "^0.9.7, 1"
 IterTools = "^1"
 LRUCache = "^1.3.0"
