--- a/Project.toml
+++ b/Project.toml
@@ -31,9 +31,9 @@ AbstractTrees = "^0.3.0, 0.4"
 ArraysOfArrays = "^0.5.3, ^0.6"
 Arrow = "2 - 2.5"
 BitIntegers = "^0.2.6, ^0.3"
-CodecLz4 = "^0.3.0, ^0.4.0"
-CodecXz = "^0.6.0, ^0.7.0"
-CodecZstd = "^0.6.0, ^0.7.0"
+CodecLz4 = "^0.3, ^0.4"
+CodecXz = "^0.6, ^0.7"
+CodecZstd = "^0.6, ^0.7, ^0.8"
 HTTP = "^0.9.7, 1"
 IterTools = "^1"
 LRUCache = "^1.3.0"
