--- a/Project.toml
+++ b/Project.toml
@@ -54,9 +54,9 @@ xrootdgo_jll = "^0.32.1"
 Arrow = "69666777-d1a9-59fb-9406-91d4454c9d45"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
-MD5 = "6ac74813-4b46-53a4-afec-0b5dc9d7885c"
+SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test", "Pkg", "MD5", "InteractiveUtils", "Arrow", "DataFrames"]
+test = ["Test", "Pkg", "SHA", "InteractiveUtils", "Arrow", "DataFrames"]
