--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ BitIntegers = "c3b6d118-76ef-56ca-8cc7-ebb389d030a1"
 CodecLz4 = "5ba52731-8f18-5e0d-9241-30f10d1ec561"
 CodecXz = "ba30903b-d9e8-5048-a5ec-d1f5b0d4b47b"
 CodecZstd = "6b39b394-51ab-5f42-8807-6242bab2b4c2"
+FHist = "68837c9b-b678-4cd5-9925-8a54edc8f695"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 IterTools = "c8e1da08-722c-5040-9ed9-7db0dc04731e"
 LRUCache = "8ac3fa9e-de4c-5943-b1dc-09c6b5f20637"
@@ -33,6 +34,7 @@ BitIntegers = "^0.2.6, ^0.3"
 CodecLz4 = "^0.3, ^0.4"
 CodecXz = "^0.6, ^0.7"
 CodecZstd = "^0.6, ^0.7, ^0.8"
+FHist = "0.10"
 HTTP = "^0.9.7, 1"
 IterTools = "^1"
 LRUCache = "^1.3.0"
