--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 Mixers = "2a8e4939-dab8-5edc-8f64-72a8776f13de"
 Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
+PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 SentinelArrays = "91c51154-3ec4-41a3-a24f-3f23e20d615c"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
@@ -44,6 +45,7 @@ LorentzVectors = "^0.4.0"
 Memoization = "^0.1.10, 0.2"
 Mixers = "^0.1.0"
 Parameters = "^0.12.0"
+PrecompileTools = "1"
 PrettyTables = "2"
 SentinelArrays = "^1.3"
 StaticArrays = "^0.12.0, ^1"
