--- a/Project.toml
+++ b/Project.toml
@@ -46,7 +46,7 @@ Mixers = "^0.1.0"
 Parameters = "^0.12.0"
 PrettyTables = "2"
 SentinelArrays = "^1.3"
-StaticArrays = "^0.12.0, ^1"
+StaticArrays = "^1"
 StructArrays = "0.6"
 Tables = "^1.0.0"
 XXhash = "0.8"
