--- a/Project.toml
+++ b/Project.toml
@@ -32,9 +32,9 @@ xrootdgo_jll = "9d84c17e-11f2-50ef-8cc9-e9701362097f"
 AbstractTrees = "^0.3.0, 0.4"
 ArraysOfArrays = "^0.5.3, ^0.6"
 BitIntegers = "^0.2.6, ^0.3"
-CodecLz4 = "^0.3, ^0.4"
-CodecXz = "^0.6, ^0.7"
-CodecZstd = "^0.6, ^0.7, ^0.8"
+CodecLz4 = "^0.4"
+CodecXz = "^0.7"
+CodecZstd = "^0.7, ^0.8"
 FHist = "0.10"
 HTTP = "^0.9.7, 1"
 IterTools = "^1"
