--- a/Project.toml
+++ b/Project.toml
@@ -36,7 +36,7 @@ CodecLz4 = "^0.4"
 CodecXz = "^0.7"
 CodecZstd = "^0.7, ^0.8"
 FHist = "0.10"
-HTTP = "^0.9.7, 1"
+HTTP = "^1"
 IterTools = "^1"
 LRUCache = "^1.3.0"
 LibDeflate = "^0.4.1"
