--- a/Project.toml
+++ b/Project.toml
@@ -29,8 +29,8 @@ XXhash = "137af188-b1ec-11e9-0b40-31ed9142ae64"
 xrootdgo_jll = "9d84c17e-11f2-50ef-8cc9-e9701362097f"
 
 [compat]
-Aqua = "0.8"
-Arrow = "2.5"
+Aqua = "^0.8"
+Arrow = "^2.6"
 AbstractTrees = "^0.4"
 ArraysOfArrays = "^0.6"
 BitIntegers = "^0.3"
@@ -39,7 +39,7 @@ CodecXz = "^0.7"
 CodecZstd = "^0.8"
 DataFrames = "^1.5"
 InteractiveUtils = "^1.0"
-FHist = "0.10"
+FHist = "^0.10"
 HTTP = "^1"
 IterTools = "^1"
 LRUCache = "^1.3.0"
