--- a/Project.toml
+++ b/Project.toml
@@ -29,26 +29,50 @@ XXhash = "137af188-b1ec-11e9-0b40-31ed9142ae64"
 xrootdgo_jll = "9d84c17e-11f2-50ef-8cc9-e9701362097f"
 
 [compat]
-AbstractTrees = "^0.3.0, 0.4"
-ArraysOfArrays = "^0.5.3, ^0.6"
-BitIntegers = "^0.2.6, ^0.3"
-CodecLz4 = "^0.3, ^0.4"
-CodecXz = "^0.6, ^0.7"
-CodecZstd = "^0.6, ^0.7, ^0.8"
-FHist = "0.10"
-HTTP = "^0.9.7, 1"
+AbstractTrees = "^0.4"
+Aqua = "^0.8"
+ArraysOfArrays = "^0.6"
+Arrow = "~2.7.1"
+BitIntegers = "^0.3"
+CodecLz4 = "^0.4"
+CodecXz = "^0.7"
+CodecZstd = "^0.8"
+DataFrames = "^1.5"
+FHist = "^0.10"
+HTTP = "^1"
+InteractiveUtils = "^1.0"
 IterTools = "^1"
 LRUCache = "^1.3.0"
 LibDeflate = "^0.4.1"
 LorentzVectors = "^0.4.0"
-Memoization = "^0.1.10, 0.2"
-Mixers = "^0.1.0"
-Parameters = "^0.12.0"
-PrettyTables = "2"
+Memoization = "^0.2"
+Mixers = "^0.1"
+Mmap = "^1.0"
+Parameters = "^0.12"
+Pkg = "^1.0"
+PrettyTables = "^2.1"
+SHA = "^1.0"
 SentinelArrays = "^1.3"
-StaticArrays = "^0.12.0, ^1"
+StaticArrays = "^1"
 StructArrays = "0.6"
-Tables = "^1.0.0"
+TOML = "^1.0"
+Tables = "^1.9"
+Test = "^1.0"
 XXhash = "0.8"
 julia = "^1.6"
 xrootdgo_jll = "^0.32.1"
+
+[extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
+Arrow = "69666777-d1a9-59fb-9406-91d4454c9d45"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
+LorentzVectors = "3f54b04b-17fc-5cd4-9758-90c048d965e3"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+SHA = "ea8e919c-243c-51af-8825-aaa63cd721ce"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Aqua", "Arrow", "DataFrames", "InteractiveUtils", "LorentzVectors", "Pkg", "SHA", "StaticArrays", "TOML", "Test"]
