--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,6 @@ LorentzVectors = "3f54b04b-17fc-5cd4-9758-90c048d965e3"
 Memoization = "6fafb56a-5788-4b4e-91ca-c0cea6611c73"
 Mixers = "2a8e4939-dab8-5edc-8f64-72a8776f13de"
 Mmap = "a63ad114-7e13-5084-954f-fe012c677804"
-OhMyThreads = "67456a42-1dca-4109-a031-0a68de7e3ad5"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 PrecompileTools = "aea7be01-6a6a-4083-8856-8a6e6704d82a"
 PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
@@ -50,12 +49,11 @@ LorentzVectors = "^0.4.0"
 Memoization = "^0.2"
 Mixers = "^0.1"
 Mmap = "^1.0"
-OhMyThreads = "^0.4.6"
 Parameters = "^0.12"
 Pkg = "^1.0"
 PrecompileTools = "^1.2.0"
 PrettyTables = "^2.1"
-SHA = "^1.0"
+SHA = "^0.7, ^1.0"
 SentinelArrays = "^1.3"
 StaticArrays = "^1"
 StructArrays = "0.6"
