--- a/Project.toml
+++ b/Project.toml
@@ -53,7 +53,7 @@ Parameters = "^0.12"
 Pkg = "^1.0"
 PrecompileTools = "^1.2.0"
 PrettyTables = "^2.1"
-SHA = "^1.0"
+SHA = "^0.7, ^1.0"
 SentinelArrays = "^1.3"
 StaticArrays = "^1"
 StructArrays = "0.6"
