--- a/Project.toml
+++ b/Project.toml
@@ -62,7 +62,7 @@ Tables = "^1.9"
 Test = "^1.0"
 julia = "^1.7"
 XXHashNative = "^1.0.1"
-xrootdgo_jll = "^0.32.1"
+xrootdgo_jll = "=0.32.1, =0.34.1"
 
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
