--- a/Project.toml
+++ b/Project.toml
@@ -39,7 +39,7 @@ CodecLz4 = "^0.4"
 CodecXz = "^0.7"
 CodecZstd = "^0.8"
 DataFrames = "^1.5"
-FHist = "^0.10"
+FHist = "^0.10, ^0.11"
 HTTP = "^1"
 InteractiveUtils = "^1.0"
 IterTools = "^1"
