--- a/Project.toml
+++ b/Project.toml
@@ -39,7 +39,7 @@ CodecLz4 = "^0.4"
 CodecXz = "^0.7"
 CodecZstd = "^0.8"
 DataFrames = "^1.5"
-FHist = "^0.10"
+FHist = "^0.10, 0.11"
 HTTP = "^1"
 InteractiveUtils = "^1.0"
 IterTools = "^1"
@@ -60,8 +60,8 @@ StructArrays = "0.6"
 TOML = "^1.0"
 Tables = "^1.9"
 Test = "^1.0"
-julia = "^1.7"
 XXHashNative = "^1.0.1"
+julia = "^1.7"
 xrootdgo_jll = "=0.32.1, =0.34.1"
 
 [extras]
