--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,7 @@ PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 SentinelArrays = "91c51154-3ec4-41a3-a24f-3f23e20d615c"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
+TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 XXHashNative = "e5d8e439-e7fa-4681-9c12-1c64bda517be"
 xrootdgo_jll = "9d84c17e-11f2-50ef-8cc9-e9701362097f"
@@ -39,7 +40,7 @@ CodecLz4 = "^0.4"
 CodecXz = "^0.7"
 CodecZstd = "^0.8"
 DataFrames = "^1.5"
-FHist = "^0.10"
+FHist = "^0.10, ^0.11"
 HTTP = "^1"
 InteractiveUtils = "^1.0"
 IterTools = "^1"
@@ -60,8 +61,8 @@ StructArrays = "0.6"
 TOML = "^1.0"
 Tables = "^1.9"
 Test = "^1.0"
-julia = "^1.7"
 XXHashNative = "^1.0.1"
+julia = "^1.7"
 xrootdgo_jll = "=0.32.1, =0.34.1"
 
 [extras]
