--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.10.30"
 [deps]
 AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 ArraysOfArrays = "65a8f2f4-9b39-5baf-92e2-a9cc46fdf018"
+Arrow = "69666777-d1a9-59fb-9406-91d4454c9d45"
 BitIntegers = "c3b6d118-76ef-56ca-8cc7-ebb389d030a1"
 CodecLz4 = "5ba52731-8f18-5e0d-9241-30f10d1ec561"
 CodecXz = "ba30903b-d9e8-5048-a5ec-d1f5b0d4b47b"
@@ -27,8 +28,8 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+XRootD = "164e3b87-dc46-4cbc-97a6-5b310108fce0"
 XXHashNative = "e5d8e439-e7fa-4681-9c12-1c64bda517be"
-xrootdgo_jll = "9d84c17e-11f2-50ef-8cc9-e9701362097f"
 
 [compat]
 AbstractTrees = "^0.4"
@@ -63,7 +64,6 @@ Tables = "^1.9"
 Test = "^1.0"
 XXHashNative = "^1.0.1"
 julia = "^1.7"
-xrootdgo_jll = "=0.32.1, =0.34.1"
 
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
