--- a/Project.toml
+++ b/Project.toml
@@ -27,8 +27,8 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 StructArrays = "09ab397b-f2b6-538f-b94a-2f83cf4a842a"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+XRootD = "164e3b87-dc46-4cbc-97a6-5b310108fce0"
 XXHashNative = "e5d8e439-e7fa-4681-9c12-1c64bda517be"
-xrootdgo_jll = "9d84c17e-11f2-50ef-8cc9-e9701362097f"
 
 [compat]
 AbstractTrees = "^0.4"
@@ -61,9 +61,9 @@ StructArrays = "0.6"
 TOML = "^1.0"
 Tables = "^1.9"
 Test = "^1.0"
+XRootD = "^0.1"
 XXHashNative = "^1.0.1"
 julia = "^1.7"
-xrootdgo_jll = "=0.32.1, =0.34.1"
 
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
