--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.10.31"
 
 [deps]
 AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
+Accessors = "7d9f7c33-5ae7-4f3b-8dc6-eff91059b697"
 ArraysOfArrays = "65a8f2f4-9b39-5baf-92e2-a9cc46fdf018"
 BitIntegers = "c3b6d118-76ef-56ca-8cc7-ebb389d030a1"
 CodecLz4 = "5ba52731-8f18-5e0d-9241-30f10d1ec561"
@@ -32,6 +33,7 @@ XXHashNative = "e5d8e439-e7fa-4681-9c12-1c64bda517be"
 
 [compat]
 AbstractTrees = "^0.4"
+Accessors = "0.1.36"
 Aqua = "^0.8"
 ArraysOfArrays = "^0.6"
 Arrow = "~2.7.1"
