--- a/.gitattributes
+++ b/.gitattributes
@@ -2,8 +2,7 @@
 notebooks/* linguist-detectable=false
 
 # Scripts to generate data for tests
-test/samples/* linguist-detectable=false
-test/samples/RNTuple/* linguist-detectable=false
+test/samples/** linguist-detectable=false
 
 # JOSS paper
 paper/** linguist-detectable=false
