--- a/.github/workflows/cvmfs.yml
+++ b/.github/workflows/cvmfs.yml
@@ -28,9 +28,15 @@ jobs:
       - uses: julia-actions/julia-buildpkg@v1
       - name: Generate root file
         run: |
-          julia --project ./test/RNTupleWriting/output_sample.jl test1.root
+          julia --code-coverage --project ./test/RNTupleWriting/output_sample.jl test1.root
       - uses: cvmfs-contrib/github-action-cvmfs@v4
       - name: Read root file in C++
         run: |
           source /cvmfs/sft.cern.ch/lcg/views/dev3/latest/x86_64-ubuntu2204-gcc11-opt/setup.sh
           python ./test/RNTupleWriting/test1.py test1.root
+      - uses: julia-actions/julia-processcoverage@v1
+      - uses: codecov/codecov-action@v4
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        with:
+          file: lcov.info
