--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,7 @@
 notebooks/* linguist-detectable=false
 
 # Scripts to generate data for tests
-test/samples/** linguist-detectable=false
+test/** linguist-detectable=false
 
 # JOSS paper
 paper/** linguist-detectable=false
