--- a/Project.toml
+++ b/Project.toml
@@ -64,7 +64,7 @@ StructArrays = "0.6"
 TOML = "^1.0"
 Tables = "^1.9"
 Test = "^1.0"
-XRootD = "^0.1"
+XRootD = "^0.1, 0.2"
 XXHashNative = "^1.0.1"
 julia = "^1.10"
 
