--- a/Project.toml
+++ b/Project.toml
@@ -60,7 +60,7 @@ Random = "^1.0"
 SHA = "^0.7, ^1.0"
 SentinelArrays = "^1.3"
 StaticArrays = "^1.5"
-StructArrays = "0.6"
+StructArrays = "0.6, 0.7"
 TOML = "^1.0"
 Tables = "^1.9"
 Test = "^1.0"
